# homework1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp  test_main.cpp
test/: CMakeLists.txt  gtest.cpp  version_test.cpp
